Deal with FTx lines that are too long to fit; logging fixes; maybe decode a bit more FT4 (#339)
* Add trailing newline to SWR console warning

When outputting a few characters to the console (as in CW mode),
a newline is not written, and the line continues until it wraps.
But a full-line console message should end with a newline.
If this is not done, the semantic spans from whatever comes next
(such as an FT8 message) might get applied to this unfinished line too,
which can be colorful but strange.

* Don't clear the logger after 73 is sent in manual mode

The intention with a75dc6de22e6e0a412e27303b2ce2dc334d2db32 was to delay
clearing it until after 73 finishes sending in any of the automated modes.
But in manual mode, we should not clear it at all. Manual means manual:
the user needs to take every step, including logging the QSO; so we shouldn't
interfere by clearing the fields.

In any automated mode, ftx_call_or_continue() logs the QSO when it sees
RR73 or RRR. But in manual mode, it returns early and does not do that;
so as a matter of symmetry, we shouldn't call_wipe() in manual mode either.

* Logbook: add ftx_rx_pitch to dial frequency, not rx_pitch

It was right until 7c45d64c3c3cbe86890671d125b5f977cd80061a

* Remove early return in ft8_rx()

The same idea was expressed two different ways: a bit below, we have
```
	if (slot_time < 500)
		ftx_rx_buff_index = 0;
```
I.e. start at the beginning of the sample buffer. We should _not_ return
early _without_ resetting ftx_rx_buff_index, in case it might miss something
next time it's called.

* Partially revert bigfont

This reverts most of commit ec3c812b0e9db932e7a2ea187eb6b96283487e10
so that it can be redone as a minimal patch.

* Restore bigfont without the reformatting

Here's the minimal patch with just the functionality, so we can actually
see the changes, just those lines in all their "glory".

This is not my change, and I don't approve of how it's done. But I need
to be able to rebase my other patches o

--- a/web/style.css
+++ b/web/style.css
@@ -560,6 +560,16 @@ input {
     color: rgb(255, 204, 0);
 }
 
+.ftx-distance {
+	font-size: 8pt;
+	color: rgb(255, 204, 0);
+}
+
+.ftx-azimuth {
+	font-size: 8pt;
+	color: rgb(153, 102, 0);
+}
+
 .ftx-mycallsign {
 	font-weight: bold;
     color: rgb(255, 0, 0);
